Reorganised project folder structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 		<title>3D World</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="index.css">
+		<link type="text/css" rel="stylesheet" href="./css/index.css">
 	</head>
 	<body>
 	<div id="title"></div>A three-dimensional world with objects, lighting and physics.<br />Press mouse to throw objects and move camera.</div>
 	<div id="entry"></div>
-	<script src="./lib/ammo.js"></script>
-	<script src="./index.js" type="module"></script>
+	<script src="./lib/ammo/ammo.js"></script>
+	<script src="./js/index.js" type="module"></script>
 	</body>
 </html>
