--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link type="text/css" rel="stylesheet" href="./css/index.css">
 	</head>
 	<body>
-	<div id="title"></div>A three-dimensional world with objects, lighting and physics.<br />Press mouse to throw objects and move camera.</div>
+	<!--<div id="title"></div>A three-dimensional world with objects, lighting and physics.<br />Press mouse to throw objects and move camera.</div>-->
 	<div id="entry"></div>
 	<script src="./lib/ammo/ammo.js"></script>
 	<script src="./js/index.js" type="module"></script>
